# yarp-devices-llm

./: .env-template  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: conda-ci.yml
assets/: LLMDevice.xml
assets/applications/: R1Chat.xml
scripts/: start_docker.sh
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/GPTDevice/: CMakeLists.txt  GPTDevice.cpp  GPTDevice.h  GPTDevice_ParamsParser.cpp  GPTDevice_ParamsParser.h  GPTDevice_params.md
src/devices/GPTDevice/assets/functions/: functions_test.json
src/devices/GPTDevice/assets/prompts/: prompt_test.txt
src/devices/GPTDevice/tests/: CMakeLists.txt  GPTDevice_test.cpp
src/devices/deviceTemplate/: CMakeLists.txt  DeviceTemplate.cpp  DeviceTemplate.h
src/devices/deviceTemplate/tests/: CMakeLists.txt  DeviceTemplate_test.cpp
src/modules/: CMakeLists.txt  LLMStream.py
src/modules/LLMStream/: CMakeLists.txt  Module.cpp  Module.h  main.cpp
tests/misc/: check_license.pl  check_license_skip.txt  check_tests_skip.txt
